--- a/main.css
+++ b/main.css
@@ -88,6 +88,149 @@ main {
 .fw-semibold { font-weight: 600; }
 .lh-tight { line-height: 1.25; }
 
+#imageGallery {
+  margin-top: 20px;
+  display: none;
+  position: fixed;
+  bottom: 15px;
+  right: 15px;
+  z-index: 9;
+}
+
+
+.container {
+  display: grid;
+  grid-template: "container" 1fr;
+  place-items: center;
+  place-content: center;
+  overflow: hidden;
+  max-height: clamp(450px, 50vh, 600px);
+  z-index: 9;
+}
+
+.container > * {
+  grid-area: container;
+  max-width: 1000px;
+}
+
+.title {
+  place-self: start center;
+}
+
+.carousel-control.prev {
+  place-self: center left;
+}
+
+.carousel-control.next {
+  place-self: center right;
+}
+
+.carousel-dots {
+  place-self: end center;
+}
+
+/* Other element styles */
+
+* {
+  box-sizing: border-box;
+}
+
+
+.carousel-viewport {
+  position: relative;
+  overflow: hidden;
+  margin: 0 auto;
+  z-index: -1;
+}
+
+.carousel-viewport .items {
+  position: relative;
+  display: flex;
+  transition: transform 500ms cubic-bezier(0.25, 1, 0.5, 1);
+}
+
+.carousel-viewport .item {
+  position: relative;
+  overflow: hidden;
+  aspect-ratio: 16 / 9;
+  min-width: 100%;
+  transform: translateZ(0);
+}
+
+.carousel-viewport img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  user-select: none;
+}
+
+.carousel-control {
+  --size: clamp(2.5rem, 8vw, 4rem);
+
+  position: relative;
+  cursor: pointer;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  color: white;
+  fill: currentcolor;
+  background: dodgerblue;
+  border: none;
+  width: var(--size);
+  height: var(--size);
+  padding: 0.25rem;
+  touch-action: manipulation;
+  transform: translateY(0);
+}
+
+.carousel-control:active {
+  transform: translateY(1px);
+}
+
+.carousel-control svg {
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+
+.carousel-dots {
+  display: flex;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+.carousel-dots .dot {
+  --size: 1rem;
+  padding: 0;
+  font-size: 0;
+  color: transparent;
+  border: 3px solid white;
+  background-color: white;
+  border-radius: 50%;
+  width: var(--size);
+  height: var(--size);
+}
+
+.carousel-dots .dot.active {
+  background-color: dodgerblue;
+}
+
+/* aspect-ratio fallback */
+@supports not (aspect-ratio: 16 / 9) {
+  .carousel-viewport .item::before {
+    content: "";
+    float: left;
+    padding-top: 56.25%;
+  }
+
+  .carousel-viewport .item::after {
+    content: "";
+    display: block;
+    clear: both;
+  }
+}
+
+
 
 #msgWindow {
   margin-top: 20px;
