--- a/main.css
+++ b/main.css
@@ -298,4 +298,8 @@ main {
 #msgForm input:focus, #msgForm button:focus {
   box-shadow: none;
 }
-
+.footer{
+  text-color: red;
+  text-align: right;
+  padding: 10px;
+}
