--- a/main.css
+++ b/main.css
@@ -95,7 +95,6 @@ main {
   bottom: 15px;
   right: 15px;
   z-index: 9;
-  max-width: 100%;
 }
 
 
@@ -105,7 +104,7 @@ main {
   place-items: center;
   place-content: center;
   overflow: hidden;
-  max-height: clamp(450px, 50vh, 600px;
+  max-height: clamp(450px, 50vh, 600px);
   z-index: 9;
 }
 
