--- a/main.css
+++ b/main.css
@@ -88,213 +88,145 @@ main {
 .fw-semibold { font-weight: 600; }
 .lh-tight { line-height: 1.25; }
 
-#imageGallery {
-  margin-top: 20px;
-  display: none;
-  position: fixed;
-  bottom: 15px;
-  right: 15px;
-  z-index: 9;
-}
-
-
-.container {
+.gallery {
   display: grid;
-  grid-template: "container" 1fr;
-  place-items: center;
-  place-content: center;
-  overflow: hidden;
-  max-height: clamp(450px, 50vh, 600px);
-  z-index: 9;
-}
-
-.container > * {
-  grid-area: container;
-  max-width: 1000px;
-}
-
-.title {
-  place-self: start center;
-}
-
-.carousel-control.prev {
-  place-self: center left;
-}
-
-.carousel-control.next {
-  place-self: center right;
-}
-
-.carousel-dots {
-  place-self: end center;
-}
-
-/* Other element styles */
-
-* {
-  box-sizing: border-box;
-}
-
-
-.carousel-viewport {
-  position: relative;
-  overflow: hidden;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 20px;
+  grid-column-start: 1;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  align-content: start;
+  max-width: 700px;
   margin: 0 auto;
-  z-index: -1;
+  transition: all 150ms linear;
 }
 
-.carousel-viewport .items {
+.gallery input[type="radio"] {
+  display: none;
+}
+
+.gallery label {
   position: relative;
-  display: flex;
-  transition: transform 500ms cubic-bezier(0.25, 1, 0.5, 1);
-}
-
-.carousel-viewport .item {
-  position: relative;
-  overflow: hidden;
-  aspect-ratio: 16 / 9;
-  min-width: 100%;
-  transform: translateZ(0);
-}
-
-.carousel-viewport img {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-  user-select: none;
-}
-
-.carousel-control {
-  --size: clamp(2.5rem, 8vw, 4rem);
-
-  position: relative;
+  display: block;
+  padding-bottom: 60%;
+  margin: 5px;
   cursor: pointer;
-  display: flex;
-  align-content: center;
-  justify-content: center;
-  color: white;
-  fill: currentcolor;
-  background: dodgerblue;
-  border: none;
-  width: var(--size);
-  height: var(--size);
-  padding: 0.25rem;
-  touch-action: manipulation;
-  transform: translateY(0);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
 }
 
-.carousel-control:active {
-  transform: translateY(1px);
+.gallery label:before {
+  border: 1px solid #e3e3e3;
+  content: '';
+  position: absolute;
+  left: -5px;
+  right: -5px;
+  bottom: -5px;
+  top: -5px;
 }
 
-.carousel-control svg {
+.gallery img {
+  display: none;
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 1;
+  grid-row-end: 2;
   width: 100%;
-  height: 100%;
-  pointer-events: none;
+  transition: all 150ms linear;
 }
 
-.carousel-dots {
-  display: flex;
-  gap: 1rem;
-  padding: 1rem;
+.gallery input[name="select"]:checked + label + img {
+  display: block;
 }
 
-.carousel-dots .dot {
-  --size: 1rem;
-  padding: 0;
-  font-size: 0;
-  color: transparent;
-  border: 3px solid white;
-  background-color: white;
-  border-radius: 50%;
-  width: var(--size);
-  height: var(--size);
-}
-
-.carousel-dots .dot.active {
-  background-color: dodgerblue;
-}
-
-/* aspect-ratio fallback */
-@supports not (aspect-ratio: 16 / 9) {
-  .carousel-viewport .item::before {
-    content: "";
-    float: left;
-    padding-top: 56.25%;
-  }
-
-  .carousel-viewport .item::after {
-    content: "";
-    display: block;
-    clear: both;
-  }
+.gallery input[name="select"]:checked + label:before {
+  border: 1px solid #000;
 }
 
 
-
-#msgWindow {
-  margin-top: 20px;
+#imageGallery {
   display: none;
   position: fixed;
+  width: 100%;
+  /* background: rgba(0,0,0,.7); */
+  width: 100%;
+  /* opacity: 1; */
+  top: 0;
   bottom: 0;
-  right: 15px;
-  z-index: 9;
+  /* overflow:scroll; */
 }
 
-#msgs {
-  margin: 0px 25px;
-  min-height: 200px;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: flex-end;
-  align-items: flex-start;
-}
-
-.msg {
-  margin: 5px 0;
-  border: 1px solid silver;
-  padding: 3px 7px;
-  display: inline-block;
-  position: relative;
-  border-radius: 10px;
-}
-.msg::before, .msg::after {
-  content: "";
-  display: inline-block;
+.lightbox-target {
+  position: fixed;
+  /* top: -100%; */
+  width: 100%;
+  /* background: rgba(0,0,0,.7); */
+  background: white;
+  width: 100%;
+  /* opacity: 0; */
+  -webkit-transition: opacity .5s ease-in-out;
+  -moz-transition: opacity .5s ease-in-out;
+  -o-transition: opacity .5s ease-in-out;
+  transition: opacity .5s ease-in-out;
+  /* overflow: hidden; */
+  opacity: 1;
+  top: 0;
   bottom: 0;
+  overflow:scroll;
+  }
+
+  
+  /* Styles the close link, adds the slide down transition */
+  
+  a.lightbox-close {
+  display: block;
+  width:50px;
+  height:50px;
+  box-sizing: border-box;
+  background: white;
+  color: black;
+  text-decoration: none;
   position: absolute;
-  border: 1px solid silver;
-}
-.msg::before {
-  right: -20px;
-  width: 15px;
-  height: 15px;
-  border-radius: 10px;
-}
-.msg::after {
-  right: -35px;
-  width: 10px;
-  height: 10px;
-  border-radius: 5px;
-}
-.msg.from {
-  align-self: flex-end;
-}
-.msg.to {
-  align-self: flex-start;
-}
-.msg.to::before {
-  right: inherit;
-  left: -20px;
-}
-.msg.to::after {
-  right: inherit;
-  left: -35px;
-}
-.msg.typing {
-  color: silver;
-}
-
-#msgForm input:focus, #msgForm button:focus {
-  box-shadow: none;
-}
+  top: 0;
+  right: 0;
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  }
+  
+  /* Provides part of the "X" to eliminate an image from the close link */
+  
+  a.lightbox-close:before {
+  content: "";
+  display: block;
+  height: 30px;
+  width: 1px;
+  background: black;
+  position: absolute;
+  left: 26px;
+  top:10px;
+  -webkit-transform:rotate(45deg);
+  -moz-transform:rotate(45deg);
+  -o-transform:rotate(45deg);
+  transform:rotate(45deg);
+  }
+  
+  /* Provides part of the "X" to eliminate an image from the close link */
+  
+  a.lightbox-close:after {
+  content: "";
+  display: block;
+  height: 30px;
+  width: 1px;
+  background: black;
+  position: absolute;
+  left: 26px;
+  top:10px;
+  -webkit-transform:rotate(-45deg);
+  -moz-transform:rotate(-45deg);
+  -o-transform:rotate(-45deg);
+  transform:rotate(-45deg);
+  }
+  
